<resources>
    <string name="app_name">telaLogin</string>
    <string name="logo_do_app">Logo do app</string>
    <string name="email">E-mail:</string>
    <string name="senha">Senha:</string>
    <string name="cadastre_se">Não tem conta? Cadastre-se</string>
    <string name="botao_entrar">Entrar</string>
    <string name="nome_cadastro">Nome completo:</string>
    <string name="email_cadastro">E-mail:</string>
    <string name="senha_cadastro">Crie uma senha:</string>
    <string name="confirmacao_senha">Confirme a senha novamente:</string>
    <string name="botao_cadastro">Cadastrar</string>
    <string name="login">Já possui conta? Login</string>
    <string name="descricao_imagem">Logo do app</string>
    <string-array name="formas_pagamento_array">
        <item>Dinheiro</item>
        <item>Cartão de Crédito</item>
        <item>Cartão de Débito</item>
        <item>PIX</item>
        <item>Transferência Bancária</item>
        <item>Outro</item>
    </string-array>
    <string-array name="categorias_despesa_array">
        <item>Alimentação</item>
        <item>Moradia</item>
        <item>Transporte</item>
        <item>Saúde</item>
        <item>Educação</item>
        <item>Lazer</item>
        <item>Vestuário</item>
        <item>Contas Fixas (água, luz, internet)</item>
        <item>Outros</item>
    </string-array>
    <string name="todas_as_categorias">Todas as Categorias</string>

    <style name="MesText">
        <item name="android:textColor">@android:color/white</item>
        <item name="android:textSize">16sp</item>
        <item name="android:paddingStart">12dp</item>
        <item name="android:paddingEnd">12dp</item>
        <item name="android:gravity">center</item>
        <item name="android:textStyle">bold</item>
    </style>

    <!-- Texto do saldo -->
    <style name="SaldoText">
        <item name="android:textColor">@color/green</item>
        <item name="android:textSize">36sp</item>
        <item name="android:textStyle">bold</item>
    </style>

    <!-- Botões verdes com borda arredondada -->
    <style name="BotaoVerde" parent="Widget.MaterialComponents.Button">
        <item name="android:textAllCaps">false</item>
        <item name="android:fontFamily">sans-serif-medium</item>
        <item name="android:textSize">16sp</item>
        <item name="android:backgroundTint">@null</item> <!-- Usar drawable direto -->
        <item name="android:paddingStart">8dp</item>
        <item name="android:paddingEnd">8dp</item>
        <item name="android:textColor">@color/white</item>
    </style>
</resources>